--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cra-template": "1.2.0",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.13.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
